--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         <activity
             android:name=".SplashActivity"
             android:noHistory="true"
-            android:exported="true"
-            android:theme="@style/Theme.NoTitle">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                     <category android:name="android.intent.category.LAUNCHER" />
